--- a/example-02/build.gradle
+++ b/example-02/build.gradle
@@ -11,3 +11,9 @@ task copyDocs(type: Copy) {
     include "**/*md"
     includeEmptyDirs = false
 }
+
+task createZip(type: Zip) {
+    from "build/docs"
+    archiveFileName = "docs.zip"
+    destinationDirectory = file("build/dist")
+}
