add task dependency

--- a/example-02/gradle.properties
+++ b/example-02/gradle.properties
@@ -1,4 +1,4 @@
 # supported levels are quiet, warn, lifecycle, info, or debug
-org.gradle.logging.level = quiet
+org.gradle.logging.level = info
 
 version = 2.0.0
