--- a/example-02/build.gradle
+++ b/example-02/build.gradle
@@ -4,7 +4,6 @@ task test {
     }
 }
 
-
 task copyDocs(type: Copy) {
     from "src"
     into "build/docs"
@@ -16,4 +15,5 @@ task createZip(type: Zip) {
     from "build/docs"
     archiveFileName = "docs.zip"
     destinationDirectory = file("build/dist")
+    dependsOn copyDocs
 }
